--- a/templates/autoscale-existing-vpc.template
+++ b/templates/autoscale-existing-vpc.template
@@ -21,15 +21,15 @@
             "Type": "String",
             "Default": "aws-quickstart",
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
-            "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
+            "ConstraintDescription": "Quick Start S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
+            "Description": "S3 bucket name for the Quick Start assets. Can only contain numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
         },
         "QSS3KeyPrefix": {
             "Type": "String",
             "Default": "quickstart-fortinet-fortigate/",
             "AllowedPattern": "^[0-9a-zA-Z-/]*$",
-            "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
-            "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
+            "ConstraintDescription": "Quick Start S3 key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
+            "Description": "S3 key prefix for the Quick Start assets. Can only contain numbers, lowercase letters, uppercase letters, hyphens (-), and forward slashes (/). If provided, it must end with a forward slash (/)."
         },
         "VPCID": {
             "Type": "AWS::EC2::VPC::Id",
@@ -47,7 +47,7 @@
         },
         "PublicSubnet2": {
             "Type": "AWS::EC2::Subnet::Id",
-            "Description": "The ID of the public subnet 1 located in Availability Zone 2 of the selected existing VPC. The Fortinet FortiGate Auto Scaling instances will be deployed here."
+            "Description": "The ID of the public subnet 2 located in Availability Zone 2 of the selected existing VPC. The Fortinet FortiGate Auto Scaling instances will be deployed here."
         },
         "PrivateSubnet1": {
             "Type": "AWS::EC2::Subnet::Id",
@@ -55,7 +55,7 @@
         },
         "PrivateSubnet2": {
             "Type": "AWS::EC2::Subnet::Id",
-            "Description": "The ID of the private subnet 1 located in Availability Zone 2 of the selected existing VPC. This subnet will be protected by the FortiGates in the public subnet of the same Availability Zone."
+            "Description": "The ID of the private subnet 2 located in Availability Zone 2 of the selected existing VPC. This subnet will be protected by the FortiGates in the public subnet of the same Availability Zone."
         },
         "PrivateSubnetRouteTable": {
             "Type": "String",
@@ -319,7 +319,7 @@
             "Default": "",
             "AllowedPattern": "^$|^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}$",
             "ConstraintDescription": "must be a valid IPv4 format.",
-            "Description": "The custom private IP address to be used by the FortiAnalyzer. Must be within the Public subnet 1 CIDR range."
+            "Description": "The custom private IP address to be used by the FortiAnalyzer. Must be within the Public subnet 1 CIDR range. Required if 'FortiAnalyzer Integration' is set to 'yes'. If 'FortiAnalyzer Integration' is set to 'no', any input will be ignored."
         },
         "IntegratedNATGatewayOptions": {
             "Type": "String",
@@ -363,10 +363,10 @@
             "Type": "AWS::CloudFormation::Stack",
             "Properties": {
                 "Parameters": {
-                    "S3BucketName": {
+                    "QSS3BucketName": {
                         "Ref": "QSS3BucketName"
                     },
-                    "S3KeyPrefix": {
+                    "QSS3KeyPrefix": {
                         "Ref": "QSS3KeyPrefix"
                     },
                     "ResourceTagPrefix": {
@@ -433,7 +433,7 @@
                     "CustomIdentifier": {
                         "Ref": "CustomIdentifier"
                     },
-                    "UniqueId": {
+                    "UniqueID": {
                         "Fn::Select": [
                             0,
                             {
@@ -762,10 +762,10 @@
                 "CustomIdentifier": {
                     "default": "Resource name prefix"
                 },
-                "VpcID": {
+                "VPCID": {
                     "default": "VPC ID"
                 },
-                "VpcCIDR": {
+                "VPCCIDR": {
                     "default": "VPC CIDR"
                 },
                 "PublicSubnet1": {
@@ -974,7 +974,7 @@
                 "Ref": "FortiOSVersion"
             }
         },
-        "UniqueId": {
+        "UniqueID": {
             "Description": "An automatically generated random string as a unique ID for all resources in the deployment stack and nested stacks.",
             "Value": {
                 "Fn::Select": [
