--- a/templates/copy-objects.template
+++ b/templates/copy-objects.template
@@ -2,14 +2,14 @@
     "AWSTemplateFormatVersion": "2010-09-09",
     "Description": "This template creates an S3 bucket in the same region where the stack is launched and copy a set of selected objects from original bucket to the new bucket. This is a modified and enhanced version from a source template origin: qs-1op312ie1.",
     "Parameters": {
-        "S3BucketName": {
+        "QSS3BucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Default": "aws-quickstart",
             "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Type": "String"
         },
-        "S3KeyPrefix": {
+        "QSS3KeyPrefix": {
             "AllowedPattern": "^[0-9a-zA-Z-/]*$",
             "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
             "Default": "quickstart-fortinet-fortigate/",
@@ -20,7 +20,7 @@
             "AllowedPattern": "^[0-9a-zA-Z-/.,]*$",
             "ConstraintDescription": "The paths can include numbers, lowercase letters, uppercase letters, hyphens (-), forward slash (/), period (.), and comma (,).",
             "Default": "",
-            "Description": "A comma-delimited list of paths to each source file to be copied from. Each path is resolved as directly following the S3KeyPrefix. It can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
+            "Description": "A comma-delimited list of paths to each source file to be copied from. Each path is resolved as directly following the QSS3KeyPrefix. It can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
             "Type": "String"
         }
     },
@@ -42,10 +42,10 @@
                     ]
                 },
                 "SourceBucket": {
-                    "Ref": "S3BucketName"
+                    "Ref": "QSS3BucketName"
                 },
                 "Prefix": {
-                    "Ref": "S3KeyPrefix"
+                    "Ref": "QSS3KeyPrefix"
                 }
             },
             "Type": "AWS::CloudFormation::CustomResource"
@@ -170,7 +170,7 @@
                                     "Effect": "Allow",
                                     "Resource": [
                                         {
-                                            "Fn::Sub": "arn:aws:s3:::${S3BucketName}/${S3KeyPrefix}*"
+                                            "Fn::Sub": "arn:aws:s3:::${QSS3BucketName}/${QSS3KeyPrefix}*"
                                         }
                                     ]
                                 },
@@ -188,7 +188,7 @@
                                     "Effect": "Allow",
                                     "Resource": [
                                         {
-                                            "Fn::Sub": "arn:aws:s3:::${DestinationBucket}/${S3KeyPrefix}*"
+                                            "Fn::Sub": "arn:aws:s3:::${DestinationBucket}/${QSS3KeyPrefix}*"
                                         },
                                         {
                                             "Fn::Sub": "arn:aws:s3:::${DestinationBucket}"
@@ -396,7 +396,7 @@
         "KeyPrefix": {
             "Description": "The key prefix between bucket root and copied object paths",
             "Value": {
-                "Ref": "S3KeyPrefix"
+                "Ref": "QSS3KeyPrefix"
             }
         }
     }
