--- a/templates/create-hybrid-auto-scaling-group.template
+++ b/templates/create-hybrid-auto-scaling-group.template
@@ -2,13 +2,13 @@
     "AWSTemplateFormatVersion": "2010-09-09",
     "Description": "Deploy the hybrid licensing FortiGate auto scaling groups.",
     "Parameters": {
-        "S3BucketName": {
+        "QSS3BucketName": {
             "Type": "String",
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "Deployment resource S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Description": "S3 bucket name for the Deployment package. Bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
         },
-        "S3KeyPrefix": {
+        "QSS3KeyPrefix": {
             "Type": "String",
             "AllowedPattern": "^[0-9a-zA-Z-/]*$",
             "ConstraintDescription": "Deployment package S3 key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
@@ -21,18 +21,18 @@
             "ConstraintDescription": "Resource tag prefix can include numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64.",
             "Description": "A prefix for tag key ResourceGroup on all resources. It's also used as the name prefix of all applicable resources. Can only contain numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64."
         },
-        "UniqueId": {
+        "UniqueID": {
             "Type": "String",
             "MaxLength": "8",
             "AllowedPattern": "[A-Za-z0-9]+",
             "ConstraintDescription": "must only contain uppercase and lowercase letters and digits",
             "Description": "A random text suffix for the DynamoDB table name which can help ensure the DB table name is unique per region. Can only contain uppercase, lowercase letters, and digits. Max length is 8."
         },
-        "AsgSubnet1Id": {
+        "AsgSubnet1ID": {
             "Type": "AWS::EC2::Subnet::Id",
             "Description": "FortiGate subnet 1, which is located in Availability Zone 1."
         },
-        "AsgSubnet2Id": {
+        "AsgSubnet2ID": {
             "Type": "AWS::EC2::Subnet::Id",
             "Description": "FortiGate subnet 2, which is located in Availability Zone 2."
         },
@@ -66,7 +66,7 @@
             "Type": "String",
             "Description": "The ID of the security group for each instance in the auto scaling group."
         },
-        "APIGatewayId": {
+        "APIGatewayID": {
             "Type": "String",
             "Description": "The ID of the API Gateway for FortiGate to communicate with the Autoscale handling Lambda functions."
         },
@@ -287,13 +287,13 @@
                                     "Action": ["s3:GetObject"],
                                     "Resource": {
                                         "Fn::Sub": [
-                                            "arn:aws:s3:::${S3BucketName}/${S3KeyPrefix}*",
+                                            "arn:aws:s3:::${QSS3BucketName}/${QSS3KeyPrefix}*",
                                             {
-                                                "S3BucketName": {
-                                                    "Ref": "S3BucketName"
+                                                "QSS3BucketName": {
+                                                    "Ref": "QSS3BucketName"
                                                 },
-                                                "S3KeyPrefix": {
-                                                    "Ref": "S3KeyPrefix"
+                                                "QSS3KeyPrefix": {
+                                                    "Ref": "QSS3KeyPrefix"
                                                 }
                                             }
                                         ]
@@ -346,7 +346,7 @@
                                                     "Ref": "AWS::Region"
                                                 },
                                                 "api": {
-                                                    "Ref": "APIGatewayId"
+                                                    "Ref": "APIGatewayID"
                                                 },
                                                 "stage": "prod",
                                                 "resource": "fgt-asg-handler"
@@ -436,10 +436,10 @@
                 },
                 "VPCZoneIdentifier": [
                     {
-                        "Ref": "AsgSubnet1Id"
+                        "Ref": "AsgSubnet1ID"
                     },
                     {
-                        "Ref": "AsgSubnet2Id"
+                        "Ref": "AsgSubnet2ID"
                     }
                 ],
                 "TerminationPolicies": ["Default"],
@@ -770,7 +770,7 @@
                                 [
                                     "fortigate-payg-autoscale-lifecycle-event-rule",
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     }
                                 ]
                             ]
@@ -823,7 +823,7 @@
                                                     "Ref": "AWS::Region"
                                                 },
                                                 "api": {
-                                                    "Ref": "APIGatewayId"
+                                                    "Ref": "APIGatewayID"
                                                 },
                                                 "stage": "prod",
                                                 "resource": "fgt-asg-handler"
@@ -838,7 +838,7 @@
                                                     "Ref": "AWS::Region"
                                                 },
                                                 "api": {
-                                                    "Ref": "APIGatewayId"
+                                                    "Ref": "APIGatewayID"
                                                 },
                                                 "stage": "prod",
                                                 "resource": "byol-license"
@@ -928,10 +928,10 @@
                 },
                 "VPCZoneIdentifier": [
                     {
-                        "Ref": "AsgSubnet1Id"
+                        "Ref": "AsgSubnet1ID"
                     },
                     {
-                        "Ref": "AsgSubnet2Id"
+                        "Ref": "AsgSubnet2ID"
                     }
                 ],
                 "TerminationPolicies": ["Default"],
@@ -1056,7 +1056,7 @@
                                 [
                                     "fortigate-byol-autoscale-lifecycle-event-rule",
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     }
                                 ]
                             ]
@@ -1092,9 +1092,9 @@
                     "Parameters": [
                         "ResourceTagPrefix",
                         "CustomIdentifier",
-                        "AsgSubnet1Id",
-                        "AsgSubnet2Id",
-                        "APIGatewayId",
+                        "AsgSubnet1ID",
+                        "AsgSubnet2ID",
+                        "APIGatewayID",
                         "ELBV2TargetGroupARNs"
                     ]
                 },
@@ -1129,7 +1129,7 @@
                     "Label": {
                         "default": "Deployment package configuration"
                     },
-                    "Parameters": ["S3BucketName", "S3KeyPrefix"]
+                    "Parameters": ["QSS3BucketName", "QSS3KeyPrefix"]
                 }
             ]
         }
