--- a/templates/create-load-balancer.template
+++ b/templates/create-load-balancer.template
@@ -7,7 +7,7 @@
             "AllowedPattern": "[0-9a-zA-Z@.#-]+",
             "MaxLength": 64,
             "ConstraintDescription": "Resource tag prefix can include numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64.",
-            "Description": "A prefix for tag key ResourceGroup on all resources. It's also used as the name prefix of all applicable resources. Can only contain numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64."
+            "Description": "The ResourceGroup Tag Key used on all resources and as the name prefix of all applicable resources. Can only contain numbers, lowercase letters, uppercase letters, ampersat(@), hyphens (-), period (.), and hash (#). Max length is 64."
         },
         "CustomIdentifier": {
             "Type": "String",
@@ -15,14 +15,14 @@
             "MaxLength": "10",
             "AllowedPattern": "[A-Za-z0-9]+",
             "ConstraintDescription": "must only contain uppercase and lowercase letters and numbers",
-            "Description": "A short custom identifier as resource name prefix. This shorter version of name prefix is used on a resource that Resource tag prefix cannot apply to. Must be at most 10 characters long and only contain uppercase, lowercase letters, and numbers. Max length is 10."
+            "Description": "An alternative name prefix to be used on a resource that the 'Resource tag prefix' cannot apply to. Can only contain numbers, lowercase letters, and uppercase letters. Max length is 10."
         },
-        "UniqueId": {
+        "UniqueID": {
             "Type": "String",
             "MaxLength": "8",
             "AllowedPattern": "[A-Za-z0-9]+",
             "ConstraintDescription": "must only contain uppercase and lowercase letters and digits",
-            "Description": "A random string as a unique ID for all resources in this deployment stack and nested stacks. Max length is 8."
+            "Description": "An automatically generated random string as a unique ID for all resources in the deployment stack and nested stacks."
         },
         "TrafficProtocol": {
             "Type": "String",
@@ -37,7 +37,7 @@
             "MinValue": 1,
             "MaxValue": 65535,
             "ConstraintDescription": "must be a valid port number between 1 and 65535.",
-            "Description": "Port for balancing incoming web traffic. Minimum is 1. Maximum is 65535."
+            "Description": "The port number used to balance incoming web traffic. Minimum is 1. Maximum is 65535."
         },
         "HealthCheckPort": {
             "Type": "Number",
@@ -134,7 +134,7 @@
                                 "Ref": "CustomIdentifier"
                             },
                             {
-                                "Ref": "UniqueId"
+                                "Ref": "UniqueID"
                             },
                             "frontend-elb"
                         ]
@@ -151,7 +151,7 @@
                                         "Ref": "CustomIdentifier"
                                     },
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     },
                                     "frontend-elb"
                                 ]
@@ -178,7 +178,7 @@
                                 "Ref": "CustomIdentifier"
                             },
                             {
-                                "Ref": "UniqueId"
+                                "Ref": "UniqueID"
                             },
                             "frontend-tg"
                         ]
@@ -218,7 +218,7 @@
                                         "Ref": "CustomIdentifier"
                                     },
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     },
                                     "frontend-tg"
                                 ]
@@ -284,7 +284,7 @@
                                 "Ref": "CustomIdentifier"
                             },
                             {
-                                "Ref": "UniqueId"
+                                "Ref": "UniqueID"
                             },
                             "service-elb"
                         ]
@@ -301,7 +301,7 @@
                                         "Ref": "CustomIdentifier"
                                     },
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     },
                                     "service-elb"
                                 ]
@@ -329,7 +329,7 @@
                                 "Ref": "CustomIdentifier"
                             },
                             {
-                                "Ref": "UniqueId"
+                                "Ref": "UniqueID"
                             },
                             "service-tg"
                         ]
@@ -371,7 +371,7 @@
                                         "Ref": "CustomIdentifier"
                                     },
                                     {
-                                        "Ref": "UniqueId"
+                                        "Ref": "UniqueID"
                                     },
                                     "service-tg"
                                 ]
@@ -444,7 +444,7 @@
                     },
                     "Parameters": [
                         "NewInternalLoadBalancer",
-                        "InternalLoadBalancingSubnetIds",
+                        "InternalLoadBalancingSubnetIDs",
                         "InternalTargetGroupHealthCheckPath"
                     ]
                 }
@@ -477,14 +477,14 @@
                 "InternalTargetGroupHealthCheckPath": {
                     "default": "Health check path"
                 },
-                "InternalLoadBalancingSubnetIds": {
+                "InternalLoadBalancingSubnetIDs": {
                     "default": "Subnet ID list"
                 }
             }
         }
     },
     "Outputs": {
-        "FgtLoadBalancerDnsName": {
+        "FgtLoadBalancerDNSName": {
             "Description": "FortiGate Autoscale load balancer DNS name",
             "Value": {
                 "Fn::GetAtt": ["FgtLoadBalancer", "DNSName"]
